# open-rpm-gtk

./: README.md  generate_pot.sh  meson.build  openrpm.doap
build-aux/: site.ikhlasulov.openrpm.json
data/: meson.build  site.ikhlasulov.openrpm.data.gresource.xml  site.ikhlasulov.openrpm.desktop.in  site.ikhlasulov.openrpm.gschema.xml  site.ikhlasulov.openrpm.metainfo.xml.in
data/icons/: meson.build
data/styles/: style.css
data/ui/: intro.ui  result.ui  shortcuts.ui  test.ui  window.ui
po/: LINGUAS  POTFILES  en.po  id.po  meson.build  ru.po  site.ikhlasulov.openrpm.pot
src/: __init__.py  calculations.py  locales.py  logger.py  main.py  meson.build  result.py  site.ikhlasulov.openrpm.in  site.ikhlasulov.openrpm.src.gresource.xml  test.py  window.py
